# mathlive-formula-editor

./: .gitignore  LICENSE  MEMORY_OPTIMIZATION.md  README.md  index.html  package-lock.json  package.json  template-library.sample.json  tsconfig.json  vite.config.js
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: autocomplete.ts  main.ts  memoryOptimizer.ts  performance.ts  styles.css  tauriApi.ts  theme.ts  virtualList.ts  worker.ts  workerManager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/types/: global.d.ts
