[package]
name = "mathlive-formula-editor"
version = "0.2.0"
description = "LaTeX Formula Editor with MathLive - Rust Backend"
authors = ["MathLive Team"]
license = "MIT"
repository = "https://github.com/mathlive/formula-editor"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-set-title", "shell-open", "dialog-open", "dialog-save", "fs-all", "path-all", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
